# geistai

./: .editorconfig  .gitignore  CLAUDE.md  COMMIT_SUMMARY.md  COMPLETE_CHANGELOG.md  EXECUTIVE_SUMMARY.md  FINAL_IMPLEMENTATION_PLAN.md  FINAL_OPTIMIZATION_RESULTS.md  FINAL_RECAP.md  FRONTEND_DEBUG_FEATURES.md  GPT_OSS_REALTIME_DATA_FIX.md  GPT_OSS_USAGE_OPTIONS.md  GPU_BACKEND_ANALYSIS.md  Geist_API_Collection.postman_collection.json  HARMONY_FORMAT_DEEP_DIVE.md  HelpfulDockerCommands.md  LLAMA_REPLACEMENT_DECISION.md  LLAMA_VS_GPT_OSS_VALIDATION.md  LLM_RESPONSE_FORMATTING_INDUSTRY_ANALYSIS.md  MEASURABLE_OUTCOMES.md  MEMORY_SYSTEM_LOCAL.md  MODEL_COMPARISON.md  MULTI_MODEL_OPTIMIZATION_RECAP.md  MULTI_MODEL_STRATEGY.md  MVP_READY_SUMMARY.md  NEGOTIATION_FLOW.md  OPTIMIZATION_PLAN.md  OPTION_A_FINDINGS_FIX.md  OPTION_A_TEST_RESULTS.md  PRICING_NEGOTIATION_IMPLEMENTATION.md  PROJECT_ANALYSIS.md  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  READY_TO_SHIP.md  RESTART_INSTRUCTIONS.md  SERVER_SIDE_VERIFICATION.md  STT_FIX_SUMMARY.md  STT_TEST_CONVERSATION.md  SUCCESS_SUMMARY.md  (+20 more)
backend/database/: .gitignore  Dockerfile  MIGRATION_GUIDE.md  README.md  __init__.py  alembic.ini  database.py  init_db.py  migrate.py  models.py  pyproject.toml
backend/embeddings/: .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup-ssl.sh  test-ssl.py
backend/router/: .dockerignore  AGENT_SYSTEM_README.md  Dockerfile  TESTING_GUIDE.md  TOOL_SYSTEM_README.md  agent_registry.py  agent_tool.py  answer_mode.py  chat_types.py  compare_models.py  comprehensive_test_suite.py  config.py  constants.py  debug_negotiate.py  events.py  extract_relevant_from_webpage.py  gpt_service.py  harmony_service.py  initial_test_cases.py  main.py  nested_orchestrator.py  orchestrator.py  process_llm_response.py  prompts.py  pyproject.toml  query_router.py  quick_simple_test.py  quick_weather_test.py  reasonableness_service.py  response_schema.py  revenuecat_auth.py  run_tests.py  setup-ssl.sh  simple_mcp_client.py  stress_test_edge_cases.py  stt_service.py  test-proxy-routes.py  test-ssl.py  test_both_endpoints.py  test_conversation.py  (+21 more)
(+232 files in other folders)
