[project]
name = "embeddings"
version = "0.1.0"
description = "Self-hosted embeddings API using SentenceTransformers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.116.1",
	"uvicorn>=0.35.0",
	"sentence-transformers>=3.0.0",
	"torch>=2.0.0,<3.0.0",
	"numpy>=1.24.0,<2.0.0",
	"pydantic>=2.0.0,<3.0.0",
]
