[project]
name = "router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai-harmony>=0.0.4",
    "uvicorn>=0.35.0",
    "sse-starlette>=1.6.5",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    # Database dependencies
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "python-dateutil>=2.8.0",
    # Web scraping and NLP dependencies
    "beautifulsoup4>=4.12.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "config", 
    "gpt_service",
    "reasonableness_service",
    "stt_service"
]

[tool.setuptools.packages.find]
exclude = ["test_*"]